# fontdue

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-ZLIB  NOTICE  README.md  fontdue.pgm  rustfmt.toml
.github/workflows/: build.yml  format.yml  test.yml
benches/: fontdue.rs  glyph.rs  layout.rs  load.rs  rasterize.rs  rusttype.rs
dev/: Cargo.toml  README.md
dev/benches/: layout.rs  rasterize.rs
dev/resources/fonts/: Comfortaa-Regular-LICENSE.txt  modernpics-LICENSE.txt
dev/tests/modules/: letter_render_tests.rs
docs/: 0.bootstrap.js  bootstrap.js  index.html
examples/: baseline-accept.rs  color.rs  header.rs  layout.rs  letter.rs  raster-print.rs  rgb.rs  rusttype.rs  shape.rs  simple.rs  simple_rgb.rs  simple_rgba.rs
fuzz/: Cargo.toml  README.md  build_corpus.py
fuzz/src/: main.rs
licenses/rust-lang/: libm
resources/: TwemojiMozilla-LICENSE.txt
resources/fonts/: FasterOne-Regular-LICENSE.txt  GreatVibes-Regular-LICENSE.txt
src/: font.rs  hash.rs  layout.rs  lib.rs  math.rs  parse.rs  raster.rs  raw.rs
src/platform/: float.rs  float_core.rs  float_x86.rs  mod.rs  simd_core.rs  simd_x86.rs
src/platform/float/: as_i32.rs  atan.rs  atan2.rs  ceil.rs  floor.rs  fract.rs  get_bitmap.rs  mod.rs  sqrt.rs  trunc.rs
src/simd/: float.rs  float_core.rs  float_x86.rs  mod.rs  simd_none.rs  simd_x86.rs
src/table/: cmap.rs  colr.rs  cpal.rs  directory.rs  glyf.rs  gsub.rs  head.rs  hhea.rs  hmtx.rs  kern.rs  loca.rs  maxp.rs  mod.rs  parse.rs  vhea.rs  vmtx.rs
src/unicode/: mod.rs  tables.rs
tests/: baseline_tests.rs  letter_render_tests.rs  raw_header_tests.rs  web.rs
tests/modules/: baseline_tests.rs  letter_render_tests.rs  mod.rs
www/: LICENSE  index.html  index.js  package-lock.json  package.json  webpack.config.js
